Bug 318925 - Filelight 1.13 - Do not scan folders function not working
Summary: Filelight 1.13 - Do not scan folders function not working
Status: RESOLVED FIXED
Alias: None
Product: filelight
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.13
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Martin Sandsmark
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-26 13:29 UTC by Chris Salinardi
Modified: 2013-11-19 01:47 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Salinardi 2013-04-26 13:29:49 UTC
Since updating to 1.13 the folders in my do not scan list are being scanned.  I have tried removing and re-adding them, but they are still being scanned.

Reproducible: Always
Comment 1 aditsu 2013-05-04 10:33:51 UTC
Same here, not really sure if it worked before but it's not working now.
Comment 2 luisfe 2013-07-05 13:37:33 UTC
I can confirm the issue.
Comment 3 Daniel Eimer 2013-07-20 11:05:52 UTC
+1
Filelight 1.13
KDE 4.10.5 "release 4"
Comment 4 Christoph Feck 2013-08-11 09:40:33 UTC
Bug 239825 comment #19 has a patch.
Comment 5 Daniel Eimer 2013-08-11 13:11:22 UTC
Thanks for the Link, but instead of rebuilding I would rather have a fixed rpm from the repos. Isn't that possible?
Comment 6 Christoph Feck 2013-08-23 11:55:46 UTC
You could ask the provider of the RPM to include the patch. If they do not package unreleased versions, you have to wait until the maintainer applies the patch and makes a new official release.
Comment 7 Daniel Eimer 2013-09-06 14:59:33 UTC
KDE 4.11 includes Filelight 1.20. Unfortunately, this version seems to have the same bug.
Comment 8 Christoph Feck 2013-09-18 23:55:38 UTC
Daniel, Filelight is not part of the KDE software compilation, in other words, no new release of Filelight was made yet.
Comment 9 Christoph Feck 2013-09-18 23:58:52 UTC
Ignore my comment above, it's just that the patch has not been applied yet.
Comment 10 Martin Sandsmark 2013-11-02 22:41:52 UTC
Git commit 0334411301146f92ee483fb0ff448c7702753d6a by Martin T. H. Sandsmark.
Committed on 02/11/2013 at 22:41.
Pushed by sandsmark into branch 'master'.

Fix the check for ignored paths.
Related: bug 204607

M  +6    -8    src/part/localLister.cpp

http://commits.kde.org/filelight/0334411301146f92ee483fb0ff448c7702753d6a
Comment 11 Martin Sandsmark 2013-11-03 01:38:58 UTC
Git commit 1773b6e9702618ac1e567c1435efeb92137b7aa1 by Martin T. H. Sandsmark.
Committed on 02/11/2013 at 22:41.
Pushed by sandsmark into branch 'KDE/4.11'.

Fix the check for ignored paths.
Related: bug 204607

M  +6    -8    src/part/localLister.cpp

http://commits.kde.org/filelight/1773b6e9702618ac1e567c1435efeb92137b7aa1