Fix the check for ignored paths.

BUG: 318925
BUG: 204607